// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageCard should should match full snapshot 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded paper-message css-4v4na6-MuiPaper-root"
    >
      <div
        class="box-message MuiBox-root css-0"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap css-19kb62l-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1e68175-MuiGrid-root"
          >
             
            <h3
              class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-p946lk-MuiTypography-root"
              style="--Typography-textAlign: center;"
            >
              Message Title
            </h3>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1p0lqwp-MuiGrid-root"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter css-168wvuq-MuiTypography-root"
              style="--Typography-textAlign: center;"
            >
              Sub Title
            </h4>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1p0lqwp-MuiGrid-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-wbtzam-MuiTypography-root"
              style="--Typography-textAlign: center;"
            >
              this is the message
            </p>
          </div>
        </div>
        <div>
          children
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`MessageCard should should match simple snapshot 1`] = `
<DocumentFragment>
  <form>
    <div
      class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded paper-message css-4v4na6-MuiPaper-root"
    >
      <div
        class="box-message MuiBox-root css-0"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-wrap-xs-nowrap css-19kb62l-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1e68175-MuiGrid-root"
          >
             
            <h3
              class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter css-p946lk-MuiTypography-root"
              style="--Typography-textAlign: center;"
            >
              Message Title
            </h3>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1p0lqwp-MuiGrid-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-wbtzam-MuiTypography-root"
              style="--Typography-textAlign: center;"
            >
              this is the message
            </p>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
